cmake_minimum_required(VERSION 3.17)
project(sem_2 C)

set(CMAKE_C_STANDARD 11)

#add_executable(sem_2 lab_4/stack.c lab_4/stack.h)
#add_executable(sem_2 lab_5/queue.c lab_5/queue.h)
#add_executable(sem_2 lab_6/ring.c lab_6/ring.h)
add_executable(sem_2 lab_7/source.c lab_7/Functions.c lab_7/Functions.h)
